src/objects/MUSW__Assessment__c.object
<CustomObject>
    <description>Evaluation of Parcel activity</description>
    <fields>
        <fullName>MUSW__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>72 Hr</fullName>
                    <default>true</default>
                    <label>72 Hr</label>
                </value>
                <value>
                    <fullName>48 Hr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>